[package]
name = "mulch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#egui = { git = "https://github.com/wsmind/egui", branch = "better_input", features = [ "bytemuck", "serde" ] }
#egui_demo_lib = { git = "https://github.com/wsmind/egui", branch = "better_input" }

#egui = { path = "../egui/crates/egui", features = [ "bytemuck", "serde" ] }
#egui_demo_lib = { path = "../egui/crates/egui_demo_lib" }

[dependencies]
bytemuck = "1.13.0"
clipboard-win = "4.5.0"
egui = { version = "0.21.0", features = [ "bytemuck", "serde" ] }
egui_demo_lib = "0.21.0"
futures = "0.3.26"
raw-window-handle = "0.5.0"
wgpu = { version = "0.15.1", features = ["spirv"] }
winit = "0.28.1"

[build-dependencies]
shaderc = "0.8.2"
